--- a/configs/config.development.yaml
+++ b/configs/config.development.yaml
@@ -9,7 +9,7 @@
 # ===========================================
 
 app:
-  name: "GRAB API (development)"
+  name: "Go REST API Starter (development)"
   environment: "development"
   debug: true                       # Enable debug mode in development
 
@@ -18,7 +18,7 @@ database:
   port: 5432
   user: "postgres"
   password: "postgres"              # Default password for development
-  name: "grab"
+  name: "go_rest_api_starter"
   sslmode: "disable"                # SSL disabled for development convenience
 
 jwt:
